# alma_bulk_tools

./: .gitignore  AGENTS.md  README.md  config.example.workflow1.yaml  pyproject.toml
alma_bulk_tools/: __init__.py  archive_query.py  cli.py  config.py  downloader.py  index_db.py  index_merge.py  layout.py  models.py  sample.py  status.py  summarize.py  unpack.py  utils.py
alma_bulk_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: alma_discover.py  alma_download.py  alma_index_scan.py  alma_merge_index.py  alma_pipeline_extract.py  alma_status.py  alma_summarize.py  alma_unpack.py  alma_webui.py
tests/: test_archive_query.py  test_cli.py  test_config.py  test_index_db.py  test_layout.py  test_manifest.py  test_status.py  test_summarize_aqua.py  test_unpack.py
